--- a/leporid_brains.Rmd
+++ b/leporid_brains.Rmd
@@ -17,6 +17,8 @@ require(phytools)
 require(forcats)
 require(bayesplot)
 library(hdrcde)
+require(mice)
+require(phylomice)
 ````
 
 
@@ -48,6 +50,30 @@ clean.data(lep.data, lep.tree)  ## check if data == tree names
 
 ```
 
+
+
+#imputation
+```{r mice}
+data_mice <- lep.data
+
+library(VIM)
+aggr_plot <- aggr(data_mice, col=c('navyblue','red'), numbers=TRUE, sortVars=TRUE, labels=names(data_mice), cex.axis=.7, gap=3, ylab=c("Histogram of missing data","Pattern"))
+
+prec <- precomputePsi(lep.tree)
+
+imp <- mice(data_mice, m=5, meth = "phpmm", psi = prec$psi, psiinv = prec$psiinv, maxit = 2)
+
+pred <- imp$predictorMatrix
+pred[, "Name_phyl"] <- 0
+pred[, "Se_temp"] <- 0
+pred[, "Se_precip"] <- 0
+pred[, "ST"] <- 0
+pred[, "SP"] <- 0
+
+imp <- mice(data_mice, m=5, pred = pred meth = "phpmm", psi = prec$psi, psiinv = prec$psiinv, maxit = 2)
+
+
+```
 
 #doctoring the tree
 ```{r fixing the tree, message=FALSE, warning=FALSE}
