--- a/leporid_brains.Rmd
+++ b/leporid_brains.Rmd
@@ -70,8 +70,7 @@ pred[, "Se_precip"] <- 0
 pred[, "ST"] <- 0
 pred[, "SP"] <- 0
 
-imp <- mice(data_mice, m=5, pred = pred meth = "phpmm", psi = prec$psi, psiinv = prec$psiinv, maxit = 2)
-
+imp <- mice(data_mice, m=5, pred = pred, seed=542, meth = "phpmm", psi = prec$psi, psiinv = prec$psiinv, maxit = 2000)
 
 ```
 
@@ -81,8 +80,6 @@ lep.tree$edge.length[which(lep.tree$edge.length == 0)] <- 0.01*median(lep.tree$e
 lep.tree <- force.ultrametric(lep.tree,method="extend")
 ```
 
-
-
 Formulas
 ```{r formulas}
 formula1 <- ECV_T ~ SeT * SeP * AdultBodyMass
@@ -90,20 +87,19 @@ formula2 <- ECV_OB ~ SeT * SeP * AdultBodyMass
 formula3 <- ECV_ROB ~ SeT * SeP * AdultBodyMass
 
 
-formula1a <- ECV_T ~ SeT * SeP * Burrow * Locomotor_Mode * Activity * AdultBodyMass
-formula2a <- ECV_OB ~ SeT * SeP * Burrow * Locomotor_Mode * Activity * AdultBodyMass
-formula3a <- ECV_ROB ~ SeT * SeP * Burrow * Locomotor_Mode * Activity * AdultBodyMass
+formula1a <- ECV_T ~ SeT * SeP * Burrow * AdultBodyMass
+formula2a <- ECV_OB ~ Burrow * Locomotor_Mode * Activity * AdultBodyMass
+formula3a <- ECV_ROB ~ Burrow * Locomotor_Mode * Activity * AdultBodyMass
 
-formula1b <- ECV_T ~ SeT * SeP * DietBreadth * GR_Area * AdultBodyMass
-formula2b <- ECV_OB ~ SeT * SeP * DietBreadth * GR_Area * AdultBodyMass
-formula3b <- ECV_ROB ~ SeT * SeP * DietBreadth * GR_Area * AdultBodyMass
+formula1b <- ECV_T ~ DietBreadth * GR_Area * AdultBodyMass
+formula2b <- ECV_OB ~ DietBreadth * GR_Area * AdultBodyMass
+formula3b <- ECV_ROB ~ DietBreadth * GR_Area * AdultBodyMass
 
-formula1c <- ECV_T ~ SeT * SeP * GestationLen * LitterSize * AdultBodyMass
-formula2c <- ECV_OB ~ SeT * SeP * GestationLen * LitterSize * AdultBodyMass
-formula3c <- ECV_ROB ~ SeT * SeP * GestationLen * LitterSize * AdultBodyMass
+formula1c <- ECV_T ~ GestationLen * LitterSize * AdultBodyMass
+formula2c <- ECV_OB ~ GestationLen * LitterSize * AdultBodyMass
+formula3c <- ECV_ROB ~ SGestationLen * LitterSize * AdultBodyMass
 
 ```
-
 
 #Parameters for the MCMC
 ```{r parameters, message=FALSE, warning=FALSE}
@@ -112,9 +108,8 @@ nitt <- 250000
 # Length of burnin -> what to ignore (the initial N ot iterations)
 burnin <- 30000
 # Amount of thinning -> lenght of step (sampling rate)
-thin <- 101
+thin <- 10
 ```
-
 
 #Creating mulTree objects
 ```{r multree, message=FALSE, warning=FALSE, verbose = FALSE}
@@ -126,7 +121,7 @@ mulTree_data <- as.mulTree(data = lep.data, tree = lep.tree,
 #change formulas
 ```{r multree, message=FALSE, warning=FALSE}
 # The formula
-mul_formula <- formula2
+mul_formula <- formula1b
 # The MCMC parameters (iterations, thining, burnin)
 mul_parameters <- c(nitt, thin, burnin)
 # The MCMCglmm priors
@@ -199,6 +194,18 @@ sum <- as.data.frame(sum$statistics)
 write.table(sum, "./MCMCmodels/analysis-output.csv", sep = ",", col.names = TRUE, row.names = TRUE)
 
 ```
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
